; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cavium-octeon.c_octeon_mmc_dmar_fixup_done.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cavium-octeon.c_octeon_mmc_dmar_fixup_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cvm_mmc_host = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cvm_mmc_host*)* @octeon_mmc_dmar_fixup_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @octeon_mmc_dmar_fixup_done(%struct.cvm_mmc_host* %0) #0 {
  %2 = alloca %struct.cvm_mmc_host*, align 8
  store %struct.cvm_mmc_host* %0, %struct.cvm_mmc_host** %2, align 8
  %3 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %2, align 8
  %4 = getelementptr inbounds %struct.cvm_mmc_host, %struct.cvm_mmc_host* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %15

8:                                                ; preds = %1
  %9 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %2, align 8
  %10 = getelementptr inbounds %struct.cvm_mmc_host, %struct.cvm_mmc_host* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = call i32 @l2c_unlock_mem_region(i64 %11, i32 512)
  %13 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %2, align 8
  %14 = getelementptr inbounds %struct.cvm_mmc_host, %struct.cvm_mmc_host* %13, i32 0, i32 0
  store i64 0, i64* %14, align 8
  br label %15

15:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @l2c_unlock_mem_region(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
